Decreased filter size to 3 increased result = 91.9%

--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -242,7 +242,7 @@
     "import tensorflow as tf\n",
     "\n",
     "BATCH_SIZE = 128\n",
-    "EPOCH = 40\n"
+    "EPOCH = 10\n"
    ]
   },
   {
@@ -285,9 +285,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 36,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -301,13 +301,14 @@
     "    layer_depth = {\n",
     "        'layer_1': 18,\n",
     "        'layer_2': 48,\n",
-    "        'layer_3': 1200,\n",
+    "        'layer_3': 1728,\n",
     "        'layer_4': 360,\n",
     "        'layer_5': 252,\n",
-    "        'layer_6': 128\n",
+    "        'layer_6': 128,\n",
+    "        'layer_7': 80\n",
     "    }\n",
     "    \n",
-    "    filter_size = 5    \n",
+    "    filter_size = 3\n",
     "    \n",
     "    weight = {\n",
     "        'layer_1': tf.Variable(tf.truncated_normal(shape=[filter_size, filter_size, 3, layer_depth['layer_1']], mean = mu, stddev = sigma)),\n",
@@ -315,7 +316,8 @@
     "        'layer_3': tf.Variable(tf.truncated_normal(shape=[layer_depth['layer_3'], layer_depth['layer_4']], mean = mu, stddev = sigma)),\n",
     "        'layer_4': tf.Variable(tf.truncated_normal(shape=[layer_depth['layer_4'], layer_depth['layer_5']], mean = mu, stddev = sigma)),\n",
     "        'layer_5': tf.Variable(tf.truncated_normal(shape=[layer_depth['layer_5'], layer_depth['layer_6']], mean = mu, stddev = sigma)),\n",
-    "        'out': tf.Variable(tf.truncated_normal(shape=[layer_depth['layer_6'], n_classes], mean = mu, stddev = sigma))\n",
+    "        'layer_6': tf.Variable(tf.truncated_normal(shape=[layer_depth['layer_6'], layer_depth['layer_7']], mean = mu, stddev = sigma)),\n",
+    "        'out': tf.Variable(tf.truncated_normal(shape=[layer_depth['layer_7'], n_classes], mean = mu, stddev = sigma))\n",
     "        \n",
     "    }\n",
     "    bias = {\n",
@@ -325,6 +327,7 @@
     "        'layer_4': tf.Variable(tf.zeros(layer_depth['layer_4'])),\n",
     "        'layer_5': tf.Variable(tf.zeros(layer_depth['layer_5'])),\n",
     "        'layer_6': tf.Variable(tf.zeros(layer_depth['layer_6'])),\n",
+    "        'layer_7': tf.Variable(tf.zeros(layer_depth['layer_7'])),\n",
     "        'out': tf.Variable(tf.zeros(n_classes)),\n",
     "    }\n",
     "    # TODO: Layer 1: Convolutional. Input = 32x32x1. Output = 28x28x6.\n",
@@ -335,7 +338,6 @@
     "\n",
     "    # TODO: Pooling. Input = 28x28x6. Output = 14x14x6.\n",
     "    l1 = pool(l1, 2)\n",
-    "    print(l1.get_shape())\n",
     "\n",
     "    # TODO: Layer 2: Convolutional. Output = 10x10x16.\n",
     "    l2 = conv2d(l1, weight['layer_2'], bias['layer_2'])\n",
@@ -345,7 +347,7 @@
     "\n",
     "    # TODO: Pooling. Input = 10x10x16. Output = 5x5x16.\n",
     "    l2 = pool(l2, 2)\n",
-    "\n",
+    "    \n",
     "    # TODO: Flatten. Input = 5x5x16. Output = 400.\n",
     "    l3 = flatten(l2)\n",
     "    \n",
@@ -367,15 +369,21 @@
     "    # TODO: Activation.\n",
     "    l5 = activation(l5)\n",
     "    \n",
+    "    # TODO: Layer 4: Fully Connected. Input = 120. Output = 84.\n",
+    "    l6 = tf.add(tf.matmul(l5, weight['layer_6']), bias['layer_7'])\n",
+    "    \n",
+    "    # TODO: Activation.\n",
+    "    l6 = activation(l6)\n",
+    "    \n",
     "    # TODO: Layer 5: Fully Connected. Input = 84. Output = 10.\n",
-    "    logits = tf.add(tf.matmul(l5, weight['out']), bias['out'])\n",
+    "    logits = tf.add(tf.matmul(l6, weight['out']), bias['out'])\n",
     "    \n",
     "    return logits"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
@@ -384,128 +392,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(?, 14, 14, 18)\n",
       "Training...\n",
       "\n",
       "EPOCH 1 ...\n",
-      "Validation Accuracy = 0.904\n",
+      "Validation Accuracy = 0.859\n",
       "\n",
       "EPOCH 2 ...\n",
-      "Validation Accuracy = 0.914\n",
+      "Validation Accuracy = 0.950\n",
       "\n",
       "EPOCH 3 ...\n",
-      "Validation Accuracy = 0.948\n",
+      "Validation Accuracy = 0.947\n",
       "\n",
       "EPOCH 4 ...\n",
-      "Validation Accuracy = 0.943\n",
+      "Validation Accuracy = 0.972\n",
       "\n",
       "EPOCH 5 ...\n",
       "Validation Accuracy = 0.967\n",
       "\n",
       "EPOCH 6 ...\n",
-      "Validation Accuracy = 0.976\n",
+      "Validation Accuracy = 0.969\n",
       "\n",
       "EPOCH 7 ...\n",
-      "Validation Accuracy = 0.972\n",
-      "\n",
-      "EPOCH 8 ...\n",
-      "Validation Accuracy = 0.925\n",
-      "\n",
-      "EPOCH 9 ...\n",
-      "Validation Accuracy = 0.974\n",
-      "\n",
-      "EPOCH 10 ...\n",
-      "Validation Accuracy = 0.953\n",
-      "\n",
-      "EPOCH 11 ...\n",
-      "Validation Accuracy = 0.963\n",
-      "\n",
-      "EPOCH 12 ...\n",
-      "Validation Accuracy = 0.916\n",
-      "\n",
-      "EPOCH 13 ...\n",
       "Validation Accuracy = 0.965\n",
       "\n",
-      "EPOCH 14 ...\n",
-      "Validation Accuracy = 0.974\n",
+      "EPOCH 8 ...\n",
+      "Validation Accuracy = 0.964\n",
       "\n",
-      "EPOCH 15 ...\n",
-      "Validation Accuracy = 0.952\n",
+      "EPOCH 9 ...\n",
+      "Validation Accuracy = 0.968\n",
       "\n",
-      "EPOCH 16 ...\n",
-      "Validation Accuracy = 0.969\n",
-      "\n",
-      "EPOCH 17 ...\n",
-      "Validation Accuracy = 0.978\n",
-      "\n",
-      "EPOCH 18 ...\n",
-      "Validation Accuracy = 0.977\n",
-      "\n",
-      "EPOCH 19 ...\n",
+      "EPOCH 10 ...\n",
       "Validation Accuracy = 0.973\n",
-      "\n",
-      "EPOCH 20 ...\n",
-      "Validation Accuracy = 0.955\n",
-      "\n",
-      "EPOCH 21 ...\n",
-      "Validation Accuracy = 0.963\n",
-      "\n",
-      "EPOCH 22 ...\n",
-      "Validation Accuracy = 0.938\n",
-      "\n",
-      "EPOCH 23 ...\n",
-      "Validation Accuracy = 0.976\n",
-      "\n",
-      "EPOCH 24 ...\n",
-      "Validation Accuracy = 0.973\n",
-      "\n",
-      "EPOCH 25 ...\n",
-      "Validation Accuracy = 0.970\n",
-      "\n",
-      "EPOCH 26 ...\n",
-      "Validation Accuracy = 0.954\n",
-      "\n",
-      "EPOCH 27 ...\n",
-      "Validation Accuracy = 0.974\n",
-      "\n",
-      "EPOCH 28 ...\n",
-      "Validation Accuracy = 0.973\n",
-      "\n",
-      "EPOCH 29 ...\n",
-      "Validation Accuracy = 0.980\n",
-      "\n",
-      "EPOCH 30 ...\n",
-      "Validation Accuracy = 0.981\n",
-      "\n",
-      "EPOCH 31 ...\n",
-      "Validation Accuracy = 0.973\n",
-      "\n",
-      "EPOCH 32 ...\n",
-      "Validation Accuracy = 0.978\n",
-      "\n",
-      "EPOCH 33 ...\n",
-      "Validation Accuracy = 0.969\n",
-      "\n",
-      "EPOCH 34 ...\n",
-      "Validation Accuracy = 0.978\n",
-      "\n",
-      "EPOCH 35 ...\n",
-      "Validation Accuracy = 0.978\n",
-      "\n",
-      "EPOCH 36 ...\n",
-      "Validation Accuracy = 0.977\n",
-      "\n",
-      "EPOCH 37 ...\n",
-      "Validation Accuracy = 0.980\n",
-      "\n",
-      "EPOCH 38 ...\n",
-      "Validation Accuracy = 0.978\n",
-      "\n",
-      "EPOCH 39 ...\n",
-      "Validation Accuracy = 0.975\n",
-      "\n",
-      "EPOCH 40 ...\n",
-      "Validation Accuracy = 0.978\n",
       "\n",
       "Model saved\n"
      ]
@@ -565,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
@@ -574,7 +491,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Accuracy = 0.905\n"
+      "Test Accuracy = 0.919\n"
      ]
     }
    ],
@@ -588,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -596,8 +513,12 @@
    "source": [
     "### Obervations:\n",
     "###    1. With default setting, increasing the EPOCH does not lead to overfitting.\n",
-    "###    2. With activation as tanh, learnining is much faster.\n",
-    "#   3. With default setting and more neurons in each layer - OVERFITTING\n",
+    "###        - Turns out in case of larger NN, it does cause over fitting. Keep EPOCH to 10\n",
+    "###    2. With activation as tanh, learning is much faster.\n",
+    "###    3. With default setting and more neurons in each layer - OVERFITTING\n",
+    "###    4. Adding new 1 new FC layer increases the accuracy by 7-8%. But adding 1+ FC, does not help\n",
+    "###    5. Decreasing filter size to 3, increased the accuracy to 91.9%\n",
+    "\n",
     "    "
    ]
   },
