Added L2 regularization. result 92%

--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false
    },
@@ -301,14 +301,14 @@
     "    layer_depth = {\n",
     "        'layer_1': 18,\n",
     "        'layer_2': 48,\n",
-    "        'layer_3': 1728,\n",
+    "        'layer_3': 2352,\n",
     "        'layer_4': 360,\n",
     "        'layer_5': 252,\n",
     "        'layer_6': 128,\n",
     "        'layer_7': 80\n",
     "    }\n",
     "    \n",
-    "    filter_size = 3\n",
+    "    filter_size = 2\n",
     "    \n",
     "    weight = {\n",
     "        'layer_1': tf.Variable(tf.truncated_normal(shape=[filter_size, filter_size, 3, layer_depth['layer_1']], mean = mu, stddev = sigma)),\n",
@@ -378,12 +378,12 @@
     "    # TODO: Layer 5: Fully Connected. Input = 84. Output = 10.\n",
     "    logits = tf.add(tf.matmul(l6, weight['out']), bias['out'])\n",
     "    \n",
-    "    return logits"
+    "    return logits, weight, bias"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 60,
    "metadata": {
     "collapsed": false
    },
@@ -395,34 +395,34 @@
       "Training...\n",
       "\n",
       "EPOCH 1 ...\n",
-      "Validation Accuracy = 0.859\n",
+      "Validation Accuracy = 0.836\n",
       "\n",
       "EPOCH 2 ...\n",
-      "Validation Accuracy = 0.950\n",
+      "Validation Accuracy = 0.906\n",
       "\n",
       "EPOCH 3 ...\n",
-      "Validation Accuracy = 0.947\n",
+      "Validation Accuracy = 0.924\n",
       "\n",
       "EPOCH 4 ...\n",
-      "Validation Accuracy = 0.972\n",
+      "Validation Accuracy = 0.934\n",
       "\n",
       "EPOCH 5 ...\n",
-      "Validation Accuracy = 0.967\n",
+      "Validation Accuracy = 0.942\n",
       "\n",
       "EPOCH 6 ...\n",
-      "Validation Accuracy = 0.969\n",
+      "Validation Accuracy = 0.954\n",
       "\n",
       "EPOCH 7 ...\n",
-      "Validation Accuracy = 0.965\n",
+      "Validation Accuracy = 0.956\n",
       "\n",
       "EPOCH 8 ...\n",
-      "Validation Accuracy = 0.964\n",
+      "Validation Accuracy = 0.961\n",
       "\n",
       "EPOCH 9 ...\n",
-      "Validation Accuracy = 0.968\n",
+      "Validation Accuracy = 0.961\n",
       "\n",
       "EPOCH 10 ...\n",
-      "Validation Accuracy = 0.973\n",
+      "Validation Accuracy = 0.962\n",
       "\n",
       "Model saved\n"
      ]
@@ -436,10 +436,14 @@
     "one_hot_y = tf.one_hot(y, n_classes)\n",
     "\n",
     "rate = 0.001 # enough compute power, do not change this\n",
+    "beta = 0.01\n",
     "\n",
-    "logits = LeNet(x)\n",
+    "logits, weight, bias = LeNet(x)\n",
     "cross_entropy = tf.nn.softmax_cross_entropy_with_logits(logits, one_hot_y)\n",
-    "loss_operation = tf.reduce_mean(cross_entropy)\n",
+    "loss_operation = tf.reduce_mean(cross_entropy)\\\n",
+    "    + beta*tf.nn.l2_loss(weight['layer_1']) + beta*tf.nn.l2_loss(weight['layer_2']) + beta*tf.nn.l2_loss(weight['layer_3']) + beta*tf.nn.l2_loss(weight['layer_4']) \\\n",
+    "    + beta*tf.nn.l2_loss(weight['layer_5']) + beta*tf.nn.l2_loss(weight['layer_6']) +  beta*tf.nn.l2_loss(weight['out'])\n",
+    "\n",
     "optimizer = tf.train.AdamOptimizer(learning_rate = rate)\n",
     "training_operation = optimizer.minimize(loss_operation)\n",
     "\n",
@@ -482,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 61,
    "metadata": {
     "collapsed": false
    },
@@ -491,7 +495,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Accuracy = 0.919\n"
+      "Test Accuracy = 0.912\n"
      ]
     }
    ],
@@ -518,7 +522,7 @@
     "###    3. With default setting and more neurons in each layer - OVERFITTING\n",
     "###    4. Adding new 1 new FC layer increases the accuracy by 7-8%. But adding 1+ FC, does not help\n",
     "###    5. Decreasing filter size to 3, increased the accuracy to 91.9%\n",
-    "\n",
+    "###    6. Added L2 regularization, accuracy increased slightly by 0.5%. Considerably less over fitting\n",
     "    "
    ]
   },
